compiles with jdk 21 up to egg 8